Add Java code formatter (#2937)
* Add java code formatter configurations

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* add formatter section

* java code formatting

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* update formatter

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* update formatter

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* update formatter

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* support modules with different java version

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* update java doc formatting

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* Revert "update java doc formatting"

This reverts commit ca77632bf0e9bef4bfdcab37e4b1e8038ca9a3e2.

* skip adding headers where they exist

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* format Driver class

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* add missing license header

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* formatting

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* bind to validate phase

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>

* chore: reformat code

---------

Signed-off-by: Iliyan Velichkov <velichkov.iliyan@gmail.com>
Co-authored-by: Vladimir Mutafov <vlado.mutafov@gmail.com>